Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2083

Annoying popup when fetching code paste

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.0.1
    • Qt Creator 2.0.0, Qt Creator 2.0.1
    • All Other Issues
    • None
    • Windows Vista x64
    • 3e31a770b5aa882c4fccdea65c7f8504beab032a

    Description

      Whenever I fetch a snippet from CodePaster or Pastebin.* Creator shows an annoying popup: popup.png

      I mean, what should "The file has changed" tell me? Of course, the file was just created that moment - so why does Creator annoy me with complaints about this expected result?

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes