CodePaster: Do not show popup about modified files on Windows.

QTemporaryFile destructor causes a file changed signal due to it
holding on to it.

Reviewed-by: dt
Task-number: QTCREATORBUG-2083
(cherry picked from commit 3e31a770b5aa882c4fccdea65c7f8504beab032a)